# aonfp

./: CMakeLists.txt  Makefile  README.md
aonfp/: aonfp.hpp
aonfp/detail/: detail.hpp  standard_fp.hpp
docs/: q.md
include/aonfp/: aonfp.hpp  cuda_copy.hpp  q.hpp
include/aonfp/detail/: add.hpp  aonfp_uint128_t.hpp  compose.hpp  compose_q.hpp  cpu_affinity.hpp  debug_print.hpp  detail.hpp  detail_q.hpp  macro.hpp  mul.hpp  operators.hpp  standard_fp.hpp  utils.hpp
sample/: Makefile
sample/aonfp_t/: Makefile  main.cpp
sample/cuda_copy/: Makefile  main.cu
sample/cuda_copy_q/: Makefile  main.cu
sample/de_compose/: Makefile
sample/de_compose_q/: main.cpp
sample/newton_div/: Makefile  main.cpp
sample/operation_add/: Makefile  main.cpp
sample/operation_mul/: Makefile  main.cpp
sample/utils/: Makefile  main.cpp
src/: cuda_copy.cu
test/cuda_copy/: Makefile  main.cu
test/de_compose/: Makefile  main.cpp
